# practice_backup

classes/day_five/notes/: CMakeLists.txt  main.cpp  notes.cpp  notes.h
classes/day_five/parking_lot/: CMakeLists.txt  main.cpp  parking_lot.cpp  parking_lot.h
classes/day_four/student/: CMakeLists.txt  main.cpp  student_dynamic.cpp  student_dynamic.h
classes/day_one/: CMakeLists.txt
classes/day_one/car/: CMakeLists.txt  car.cpp  car.h  main.cpp
classes/day_one/circle/: CMakeLists.txt  circle.cpp  circle.h  main.cpp
classes/day_one/person/: CMakeLists.txt  main.cpp  person.cpp  person.h
classes/day_seven/medialib/: CMakeLists.txt  main.cpp  media.cpp  media.h
classes/day_six/: .main.cpp.swp  .notes_advanced.cpp.swp  .notes_advanced.h.swp  CMakeLists.txt  main.cpp  notes_advanced.cpp  notes_advanced.h
classes/day_three/car_dynamic/: CMakeLists.txt  car.cpp  car.h  main.cpp
classes/day_two/bank_account/: CMakeLists.txt  bank_account.cpp  bank_account.h  main.cpp
classes/day_two/employee/: .main.cpp.swp  CMakeLists.txt  (+3 more)
hello_world/: CMakeLists.txt  hello_world.cpp
pointers/day_four/: CMakeLists.txt  day_four.cpp
pointers/day_one/: CMakeLists.txt  main.cpp
pointers/day_two/: CMakeLists.txt  main_day_two.cpp
uniqie_ptr/day_four/download_manager/: CMakeLists.txt
uniqie_ptr/day_four/download_manager/headers/: DownloadManager.h  DownloadState.h  DownloadingState.h  FailState.h  IdleState.h  PauseState.h
uniqie_ptr/day_four/download_manager/src/: DownloadManager.cpp  DownloadingState.cpp  FailState.cpp  IdleState.cpp  PauseState.cpp  main.cpp
(+395 files in other folders)
